--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bài tốt nghiệp</title>	
+	<title>Bài tốt nghiệp Khóa Học Front-end cơ bản HVCG</title>	
 	<link rel="stylesheet" type="text/css" href="tainguyen/css/bootstrap.min.css">	
 	<link rel="stylesheet" type="text/css" href="tainguyen/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="tainguyen/css/index.css">
